Update styles and structure for improved readability and responsiveness

--- a/index.html
+++ b/index.html
@@ -9,7 +9,56 @@
 </head>
 
 <body>
-  Hello world
+  <!-- Header with Navigation -->
+  <header>
+    <nav>
+      <ul>
+        <!-- Navigation links -->
+        <li><a href="#">Home</a></li>
+        <li><a href="#destinations">Destinations</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <h1>Explore Sustainable Travel</h1>
+    <p>Discover eco-friendly destinations and make a positive impact on the planet.</p>
+    <!-- Call-to-Action Section -->
+    <div class="cta">
+      <p>Ready to start your eco-friendly adventure?</p>
+      <button>Plan Your Trip</button>
+    </div>
+  </section>
+
+  <!-- Destination Cards Section -->
+  <section id="destinations" class="destinations">
+    <h2>Eco-Friendly Destinations</h2>
+    <div class="cards">
+      <!-- Card 1 -->
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=400&q=80"
+          alt="Green Mountains">
+        <h3>Green Mountains</h3>
+        <p>Enjoy hiking and fresh air in a protected natural reserve.</p>
+      </div>
+      <!-- Card 2 -->
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=400&q=80"
+          alt="Blue Lake">
+        <h3>Blue Lake</h3>
+        <p>Swim and relax by crystal-clear waters in a sustainable park.</p>
+      </div>
+      <!-- Card 3 -->
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1500534314209-a25ddb2bd429?auto=format&fit=crop&w=400&q=80"
+          alt="Sunny Forest">
+        <h3>Sunny Forest</h3>
+        <p>Walk among tall trees and learn about local wildlife.</p>
+      </div>
+    </div>
+  </section>
+
   <script src="script.js"></script>
 </body>
 
